# cutup

./: .gitignore  LICENSE  README.md  __init__.py  cutup.py  cutup.toml  justfile  pyfactor.toml  pyproject.toml  requirements.txt
examples/lodash_to_es/: examples.txt  lodash_to_es.py  lodash_vs_es2022_gpt4o-mini-temperature=1.txt  lodash_vs_es2022_gpt4o_temperature=1.txt
examples/postgres_to_ts/: examples.txt  schema.sql  tables_to_interfaces.py
examples/python_2_to_3/: python_2_to_3.py
src/: __init__.py  agent_tools.py  chatgpt.py  config.py  console.py  dict_utils.py  env_vars.py  http.py  http_utils.py  insertion.py  io.py  log.py  main.py  openai.py  options.py  parsing.py  path_ref.py  path_refs.py  prompting.py  regexp_utils.py  script_util.py  search.py  shell.py  signals.py  test_io.py
tests/: a  config_stub.py  insertion.py  test_agent.py  test_dict_utils.py  test_insertion.py  test_io.py  test_path_ref.py  test_prompting.py
tests/fixtures/: testfile.txt
