[project]
name = "pyfactor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "blinker>=1.9.0",
    "mypy>=1.15.0",
    "openai>=1.63.2",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "ruff>=0.9.6",
    "typer>=0.15.1",
]
