[project]
name = "cutup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "openai>=1.63.2",
    "pydantic-ai>=0.0.24",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "ruff>=0.9.6",
    "typer>=0.15.1",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
